[tool.poetry]
name = "sse-middleware-fastapi-poc"
version = "0.1.0"
description = ""
authors = ["amit rahav <amit.r.89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
Hypercorn = "^0.11.2"
sse-starlette = "^0.7.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
